--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
+            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
             android:windowSoftInputMode="stateHidden|adjustResize">
 
             <intent-filter>
